# BinocularVision

./: README.md
1_BinocularVision/Calibration/: CMakeLists.txt  Demarcation.cpp
1_BinocularVision/CaptureImage/: CMakeLists.txt
1_BinocularVision/OpenCamera/: CameraSave.cpp  picture.cpp
20191014/: BinocularVision.sln
20191014/01_Capture/: 01_Capture.vcxproj  01_Capture.vcxproj.filters  capture.cpp
20191014/02_DoubleEyes/: 02_DoubleEyes.vcxproj  02_DoubleEyes.vcxproj.filters  双目相机效果.cpp
20191014/03_CaptureImages/: 03_CaptureImages.vcxproj  03_CaptureImages.vcxproj.filters  采集图像.cpp
20191014/04_Calibrate/: 03_Calibrate.vcxproj.filters  04_Calibrate.vcxproj  stereo_calibration.xml  双目标定和立体校正.cpp  采集图像.cpp
20191014/05_DistanceMeasurement/: 05_DistanceMeasurement.vcxproj  双目测距.cpp  (+1 more)
2_BinocularVision/: CMakeLists.txt
5_ADCensus/: adcensuscv.cpp  aggregation.cpp  disparityrefinement.cpp  main.cpp  myTest.cpp  stereoprocessor.cpp  stereoprocessor.h
src/: CMakeLists.txt  Calibration.cpp  Calibration.h  Camera.cpp  Camera.h  README.md  main.cpp  main.h
src/01_Capture/: CMakeLists.txt  打开摄像头.cpp
src/02_DoubleEyes/: CMakeLists.txt
src/03_CaptureImages/: CMakeLists.txt  采集图像.cpp
src/04_Calibrate/: CMakeLists.txt  stereo_calibration.xml  双目标定和立体校正.cpp
src/05_DistanceMeasurement/: CMakeLists.txt  双目测距.cpp
src/06_PCLTest/: CMakeLists.txt
src/07_StereoBuild/: CMakeLists.txt  三维重建.cpp
src/07_StereoMatch/: CMakeLists.txt  立体匹配.cpp
src/08_StereoView/: CMakeLists.txt  文本转pcd.cpp
src3/: CMakeLists.txt
vs2017/: PCL.sln
vs2019/: BinocularVision.sln
(+58 files in other folders)
